<resources>
    <string name="app_name">task-01AS</string>
    <string name="back">Back</string>
    <string name="memoriable">Памятка</string>
    <string name="task">Task</string>
    <string name="premium">Premium</string>
    <string name="safe_mode">Safe mode</string>
    <string name="show_calendar">Show calendar?</string>
    <string name="permit">Permit</string>
    <string name="commentary">Commentary</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="ids">IDS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>