<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/commentary"
        tools:text="EditText - text" />

    <EditText
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/name"
        tools:text="EditText - textPersonName" />

    <EditText
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:text="@string/phone"
        tools:text="EditText - phone" />

    <EditText
        android:text="@string/ids"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="20sp"
        tools:text="EditText - number" />

    <EditText
        android:text="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="20sp"
        tools:text="EditText - textEmailAddress" />

    <EditText
        android:text="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="20sp"
        tools:text="EditText - textEmailAddress" />

    <Button
        android:id="@+id/B_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back"
        android:textSize="20sp"
        tools:text="Button" />

</LinearLayout>